# cicd-for-modern-ai

./: .gitlab-ci-example-2.yml  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  tutorial-github-ci.md
.github/workflows/: 1-get-started.yml  2-understanding-cicd.yml  3-best-practices-github.yml  github-ci.yml
examples/: 1-get-started.yml  2-understanding-cicd.yml
gitlab-examples/: 1-get-started.yml  2-understanding-cicd.yml  3-best-practices-gitlab.yml
